Include r2r systems in app